Local monitor page

--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
 html, body {
-  background-color: #faf9f8 !important;
+  background-color: #faf9f8 ;
 }
