Updated Local Display and Home

--- a/src/Components/LocalDisplay.css
+++ b/src/Components/LocalDisplay.css
@@ -19,3 +19,13 @@ h1 {
     margin-top: 0;
     text-shadow: 5px 5px 0 rgba(0,0,0,0.1);
   }
+  .icons {
+    -moz-transition: all .5s ease-in;
+    -o-transition: all .5s ease-in;
+    -webkit-transition: all .5s ease-in;
+    transition: all .5s ease-in;
+    padding: 20px;
+}
+.transition {
+    visibility: hidden;
+}
