--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family:'Dosis';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;;
   background-color: #f2f5f7;
@@ -125,11 +123,6 @@ path
 
 }
 
-td
-{
-  /*background-color: pink; */
-}
-
 table
 {
   width: 85%;
@@ -141,3 +134,20 @@ table
 {
   width: 50%;
 }
+
+.totalWrap
+{
+  width: 100%; 
+  height: auto;
+  position: absolute; 
+  z-index: -20; 
+  background: linear-gradient(45deg, rgba(66, 135, 245, 0.45), rgba(24, 60, 242, 0.45), rgba(141, 79, 247, 0.45), rgba(127, 57, 247, 0.45), rgba(100, 187, 250, 0.45), rgba(90, 19, 242, 0.45));
+  background-size: 600% 100%;
+  animation: gradient 16s linear infinite; 
+  animation-direction: alternate; 
+}
+@keyframes gradient
+{
+  0% {background-position: 0%}
+  100% {background-position: 100%}
+} 
