--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,21 @@ svg:hover .grey
   fill: grey; 
 }
 
+#key
+{
+  margin-left: 8%;
+}
+
+#red
+{
+  background-color: red; 
+}
+
+#yellow
+{
+  background-color: yellow;
+}
+
 h1
 {
   color: white;
